# d1c-solana

./: .env  .gitignore  Anchor.toml  Cargo.toml  DEVNET_SETUP.md  README.md  WALLET_LINK_GUIDE.md  package-lock.json  package.json  tsconfig.json
data/: schools-wallets.json  schools.json
migrations/: deploy.ts
programs/division-one-crypto/: Cargo.toml
programs/division-one-crypto/src/: lib.rs
scripts/: create-token.ts  create-wallet-registry-pda.ts  mint-tokens.ts  simple-user-link-client.ts  test-simple-flow.ts  test-transfer-fee.ts  wallet-generator.ts  wallet-link-simple.ts
tests/: division-one-crypto.ts
