[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[package]
name = "division-one-crypto"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("custom-heap"))'] }

[lib]
crate-type = ["cdylib", "lib"]
name = "division_one_crypto"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = "4.0"
spl-tlv-account-resolution = "0.6"
spl-transfer-hook-interface = "0.8"
